[package]
name = "actix-remote"
version = "0.0.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Support for distributed actors for actix framework"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "async", "actix", "tokio"]
homepage = "https://github.com/actix/actix-remote"
repository = "https://github.com/actix/actix-remote.git"
documentation = "https://docs.rs/actix-remote/"
categories = ["network-programming", "asynchronous"]
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]

[lib]
name = "actix_remote"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "actix/actix-remote", branch = "master" }
codecov = { repository = "actix/actix-remote", branch = "master", service = "github" }

[dependencies]
actix = "0.5"

log = "0.4"
net2 = "0.2"
backoff = "0.1"
byteorder = "1"
bytes = "0.4"
failure = "^0.1.1"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[workspace]
members = [
  "./",
  "examples/basics",
]
